# hereJob

./: .env.template  .gitignore  README.MD  mypy.ini  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/src/: utils.py
backend/api/src/api/v1/offerts/: router.py
backend/api/src/common/models/: offert.py
backend/scrapper/: main.py
backend/scrapper/src/: service.py
backend/scrapper/src/common/: singleton.py
backend/scrapper/src/common/dto/: __init__.py  justJoinIt.py
backend/scrapper/src/common/factories/: scrapper.py
backend/scrapper/src/common/models/: offert.py
backend/scrapper/src/common/schemas/: pipeData.py
backend/scrapper/src/db/: database.py
backend/scrapper/src/queue/: queue.py  queueTask.py
backend/scrapper/src/scrappers/: justJoinIt.py
backend/scrapper/src/scrappers/samples/: justjoinit.json
backend/scrapper/src/services/: distance.py  geo.py  parseDTO.py
backend/scrapper/src/services/justjJoinit/: parseDTO.py
backend/src/: main.py
backend/src/api/v1/: router.py
backend/src/api/v1/jobOffert/: router.py
