[tool.poetry]
name = "herejob"
version = "0.1.0"
description = ""
authors = ["kacpereqo <remzak.k@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"



[tool.poetry.group.api.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
motor = "^3.3.2"


[tool.poetry.group.scrapper.dependencies]
redis = {extras = ["hiredis"], version = "^5.0.2"}
rq = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
